@@ -3,6 +3,8 @@ Version 1.7.6
        handle putty session names. (Stefan)
 - BUG: Issue #216: Apply patch marks deleted
        files as "missing". (Stefan)
+- BUG: Issue #177: TortoiseMerge truncates
+       long lines. (Stefan)
 
 Version 1.7.5
 - BUG: Issue #184: Refresh in log dialog only refreshes
